# GEANT4-simulations-for-DSSSD

./: CMakeLists.txt  Efficiency.cpp  README.md  UserInput_Test  generateConfig_Talys.cpp  generateConfig_UserInput.cpp  init_vis.mac  myDSSSD.cc  nt0003.000ang.L00  run.mac  vis.mac
Analysis_Codes/: GEANT_Analysis_MONNET.cpp  GEANT_Analysis_n_TOF.cpp
Talys_Example/: li6.in.txt  lif.out  lif_20bins.out  na0003.000ang.L00  nd0003.000ang.L00  ng0003.000ang.L00  ng0003.000ang.L01  ng0003.000ang.L02  ng0003.000ang.L03  ng0003.000ang.L04  ng0003.000ang.L05  nn0003.000ang.L00  nn0003.000ang.L01  nt0003.000ang.L00
include/: PrimaryParticleInformation.hh  UserInput.hh  action.hh  bifprobability.hh  construction.hh  detector.hh  event.hh  generator.hh  physics.hh  run.hh  stepping.hh
src/: UserInput.cc  action.cc  bifprobability.cc  construction.cc  detector.cc  event.cc  generator.cc  physics.cc  run.cc  stepping.cc
